fix grid aabb; failed asset taskInfo added to inspector

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -975,6 +975,9 @@ strong {
                         @extend .noSelect;
                     }
                 }
+                > .ui-label.error {
+                    color: #ff2020;
+                }
             }
         }
         &.field-number, &.field {
