WIP: move project settings to sharejs

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -4183,7 +4183,7 @@ strong {
         width: 11px;
         height: 24px;
         top: 0;
-        right: 0;
+        right: 10px;
         @extend .font-icon;
         text-align: center;
         border: none;
