Start batch group ids from larger number to avoid clashes with user-created groups, Added button to create new group on the bottom of the model and element components batchgroup picker

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1753,6 +1753,19 @@ strong {
                 }
             }
         }
+        &.model, &.element {
+            > .content {
+                .add-batch-group {
+                    color: $text-active;
+                    &:before {
+                        content: '\E120';
+                        padding-right: 8px;
+                        @extend .font-icon;
+                        color: $text-active;
+                    }
+                }
+            }
+        }
         &.script {
             > .content {
                 padding-top: 6px;
