Added -webkit-tap-highlight-color: transparent to launch page body to avoid blue flash on Chrome when the cursor is a pointer

--- a/editor/sass/launch.scss
+++ b/editor/sass/launch.scss
@@ -42,6 +42,9 @@ body {
     font-family: Helvetica, arial, sans-serif;
     position: relative;
     width: 100%;
+
+    // do not do blue highlight if cursor=pointer on Chrome
+    -webkit-tap-highlight-color: transparent;
 }
 
 #application-canvas {
