--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -5890,7 +5890,7 @@ strong {
                 flex-direction: row;
                 height: calc(100% - 32px);
 
-                .sprite-canvas-root {
+                .sprite-canvas {
                     position: absolute;
                     width: 100%;
                     height: 100%;
@@ -5900,18 +5900,37 @@ strong {
                         height: 100%;
 
                         .canvas {
-                            background: url('../img/checker.png');
                             width: 100%;
                             height: 100%;
+                            background: url('../img/checker.png');
                         }
                     }
                 }
 
                 .left-panel {
-                    background-color: transparent;
+                    position: relative;
+                    top: 100%;
+                    height: 0;
+                    overflow: visible;
 
                     > .content {
-                        background-color: transparent;
+
+                        .edit-frame-button {
+                            position: absolute;
+                            left: 11px;
+                            bottom: 44px;
+                            width: 302px;
+                            height: 38px;
+                            line-height: 38px;
+                            text-align: center;
+                            text-transform: capitalize;
+
+                            border: {
+                                style: solid;
+                                color: $border-primary;
+                                width: 1px;
+                            };
+                        }
 
                         .canvas-control {
                             position: absolute;
