Added sprite component, Sprite asset fixes, Added Sprite asset preview, Changed asset previews to have direct access to a canvas instead of always rendering to a texture first, Changed particle system fields to use a canRandomize property instead of a paths property so that paths can be used for other purposes

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -2271,7 +2271,7 @@ strong {
                 top: 0px;
             }
 
-            > .ui-button.add-script, .ui-button.add-sound-slot, .ui-button.add-batch-group {
+            > .ui-button.add-script, .ui-button.add-sound-slot, .ui-button.add-batch-group, .ui-button.add-clip {
                 margin: 0 0 8px 0;
                 background-color: $bcg-dark;
 
@@ -3333,8 +3333,8 @@ strong {
             > .thumbnail.placeholder:after {
                 content: '\E202';
             }
-            > .icon {
-                display: none;
+            > .icon:after {
+                content: '\E264';
             }
         }
         &.type-binary {
@@ -6027,6 +6027,46 @@ strong {
         }
         .ui-text-field.error {
             border-color: #fb222f;
+        }
+        .remove {
+            @extend .font-icon;
+
+            float: right;
+            width: 32px;
+            height: 32px;
+            line-height: 32px;
+            margin: 0;
+            padding: 0;
+            border: none;
+            font-size: 14px;
+            text-align: center;
+            background-color: transparent;
+
+            &:hover {
+                background-color: $bcg-darkest;
+            }
+
+            &:after {
+                content: '\E124';
+                font-weight: 200;
+            }
+        }
+    }
+}
+
+.ui-panel.clips {
+    > .content {
+        padding-top: 8px;
+    }
+
+    .ui-panel.clip {
+        margin-bottom: 2px;
+
+        > .ui-header > .title {
+            width: calc(100% - 32px);
+        }
+        > .content {
+            padding: 8px 6px;
         }
         .remove {
             @extend .font-icon;
