--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1516,7 +1516,7 @@ strong {
         > .content {
             padding: 4px;
             overflow: hidden;
-            background-color: #2c393c;
+            background-color: $bcg-dark;
 
             > .face {
                 position: relative;
@@ -2500,7 +2500,7 @@ strong {
                 border-bottom: 1px solid $bcg-darker;
             }
             > .ui-header {
-                background-color: #2c393c;
+                background-color: $bcg-dark;
                 overflow: hidden;
                 height: 32px;
                 line-height: 32px;
@@ -5927,7 +5927,7 @@ strong {
                 .canvas-panel {
                     position: absolute;
                     width: 100%;
-                    height: calc(100% - 32px);
+                    height: calc(100% - 34px);
 
                     > .content {
                         width: 100%;
@@ -5968,15 +5968,39 @@ strong {
                     left: 0;
                     bottom: 0;
                     width: 100%;
-                    height: 32px;
+                    height: 34px;
                     border: {
                         style: solid;
                         color: $border-primary;
-                        width: 1px 0 1px 1px;
+                        width: 1px 0 1px 0;
                     };
                     box-sizing: border-box;
 
+                    > .content {
+                        height: 100%;
+                    }
+
+                    .alpha-control, .slider-control {
+                        > .content {
+                            padding-left: 12px;
+                            height: 100%;
+                            > .ui-label {
+                                font-size: 12px;
+                                line-height: 28px;
+                            }
+                            > .ui-number-field {
+                                margin: auto 3px;
+                            }
+                            > .ui-slider {
+                                margin: auto 3px;
+                            }
+                        }
+                    }
+
                     .alpha-control {
+                        > .content {
+                            padding-right: 12px;
+                        }
                         border: {
                             style: solid;
                             color: $border-primary;
@@ -6007,6 +6031,43 @@ strong {
                     right: 0px;
                     border: 1px solid $border-primary;
                     box-sizing: border-box;
+
+                    > .content {
+                        > .ui-panel {
+                            > .content {
+                                padding: 8px 6px;
+                            }
+                        }
+                    }
+
+                    .sprite-assets {
+                        .sprite {
+                            background-color: $bcg-dark;
+                            border: 1px solid $bcg-darker;
+                            border-bottom: 0;
+                            padding: 5px;
+                            white-space: nowrap;
+
+                            &:last-child {
+                                border-bottom: 1px solid $bcg-darker;
+                            }
+
+                            &:hover {
+                                background-color: $bcg-darkest;
+
+                                cursor: pointer;
+                            }
+
+                            .ui-label.name {
+                                font-size: 12px;
+                                vertical-align: top;
+                                margin-left: 5px;
+                                max-width: calc(100% - 31px);
+                                overflow: hidden;
+                                text-overflow: ellipsis;
+                            }
+                        }
+                    }
                 }
             }
         }
