--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -5936,31 +5936,35 @@ strong {
                         .canvas {
                             width: 100%;
                             height: 100%;
-                            background: url('../img/checker.png');
+
+                            $checkerboard-dark: #eaeaea;
+                            background-color: #fff;
+                            background-image:
+                            -moz-linear-gradient(45deg, $checkerboard-dark 25%, transparent 25%,transparent 75%, $checkerboard-dark 75%, $checkerboard-dark 100%),
+                            -moz-linear-gradient(45deg, $checkerboard-dark 25%, transparent 25%,transparent 75%, $checkerboard-dark 75%, $checkerboard-dark 100%);
+                            background-image:
+                            -webkit-linear-gradient(45deg, $checkerboard-dark 25%, transparent 25%,transparent 75%, $checkerboard-dark 75%, $checkerboard-dark 100%),
+                            -webkit-linear-gradient(45deg, $checkerboard-dark 25%, transparent 25%,transparent 75%, $checkerboard-dark 75%, $checkerboard-dark 100%);
+                            background-image:
+                            linear-gradient(45deg, $checkerboard-dark 25%, transparent 25%,transparent 75%, $checkerboard-dark 75%, $checkerboard-dark 100%),
+                            linear-gradient(45deg, $checkerboard-dark 25%, transparent 25%,transparent 75%, $checkerboard-dark 75%, $checkerboard-dark 100%);
+                            -moz-background-size: 24px 24px;
+                            background-size: 24px 24px;
+                            -webkit-background-size: 25px 25px;
+                            background-position: 0 0, 12px 12px;
                         }
                     }
 
-                    &.panning {
+                    &.grab {
+                        cursor: -webkit-grab;
+                        cursor: -moz-grab;
+                    }
+
+                    &.grabbing {
                         cursor: -webkit-grabbing;
                         cursor: -moz-grabbing;
                     }
-                }
 
-                .edit-frame-button {
-                    position: absolute;
-                    left: 15px;
-                    bottom: 15px;
-                    width: 302px;
-                    height: 38px;
-                    line-height: 38px;
-                    text-align: center;
-                    text-transform: capitalize;
-
-                    border: {
-                        style: solid;
-                        color: $border-primary;
-                        width: 1px;
-                    };
                 }
 
                 .canvas-control {
