wip sprite editor

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -6040,6 +6040,10 @@ strong {
                         > .ui-panel {
                             > .content {
                                 padding: 8px 6px;
+
+                                .field-button {
+                                    text-align: center;
+                                }
                             }
                         }
                     }
